--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
-  "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+  "lint": {
+    "{src,apps,libs,test}/**/*.ts": [
+      "prettier --write",
+      "eslint --fix"
+    ]
+  },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@types/node": "^20",
