--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@hookform/resolvers": "^4.1.0",
+    "@reduxjs/toolkit": "^2.5.1",
+    "lucide-react": "^0.475.0",
     "next": "15.1.6",
+    "next-auth": "^5.0.0-beta.25",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-hook-form": "^7.54.2",
+    "react-redux": "^9.2.0",
+    "yup": "^1.6.1"
   },
   "lint": {
     "{src,apps,libs,test}/**/*.ts": [
