--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
+    "react-toastify": "^11.0.3",
     "yup": "^1.6.1"
   },
   "lint": {
